Implementation call for all suppliers